welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:37: error: Unmatched closing brace '}' ignored here
	}
        ^