welcome.lessons.welcome.bdr.BDR.scala.code
var fini:Boolean = false ;
var x:String = "D" ;
x=litMessage();
while (!fini)
  if (x == "R") {
      droite();
      avance();
  } else if (x == "L") {
      gauche();
      avance();
  } else if (x == "I") {
      droite();
      droite();
      avance();
  } else if (x == "A") {
      avance();
  } else if (x == "B") {
      avance();
      avance();
  } else if (x == "C") {
      avance();
      avance();
      avance();
  } else if (x == "Z") {
      recule();
  } else if (x == "Y") {
      recule();
      recule();
  } else if (x == "X") {
      recule();
      recule();
      recule();
  }

}